# fingerdb

./: .ghcid  CHANGELOG.md  README.org  config.dhall  default.nix  fingerdb-backend.cabal  tables.sql
app/: .dir-locals.el  Main.hs
src/Fingerdb/: Backend.hs  Database.hs  Handlers.hs  Models.hs  Prelude.hs  XML.hs
static/: styles.css
