cabal-version:       3.0
name:                fingerdb-backend
synopsis:            Violin fingering database API
version:             0.0.1.0
homepage:            https://github.com/jmorag/fingerdb-backend
license:             MIT
author:              Joseph Morag
maintainer:          Joseph Morag
copyright:           Joseph Morag
category:            Music, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-deps
  build-depends: base >= 4.11 && < 5
               , rio
               , time
               , aeson
               , dhall
               , resource-pool
               , servant
               , servant-server
               , persistent
               , persistent-postgresql
               , postgresql-simple
               -- , music-suite

common common-warnings
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints

library
  import:              common-deps, common-warnings
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Fingerdb.Backend
  ghc-options:         -Wall -fno-warn-name-shadowing

executable fingerdb-backend
  import:              common-deps, common-warnings
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded -O2
  build-depends:       fingerdb-backend

test-suite fingerdb-backend-tests
  import:              common-deps, common-warnings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       hedgehog
