cabal-version:       3.0
name:                fingerdb-backend
synopsis:            Violin fingering database API
version:             0.0.1.0
homepage:            https://github.com/jmorag/fingerdb-backend
license:             MIT
author:              Joseph Morag
maintainer:          Joseph Morag
copyright:           Joseph Morag
category:            Music, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.org

common common-deps
  build-depends: base >= 4.11 && < 5,
                 aeson,
                 cryptonite,
                 dhall,
                 digestive-functors,
                 digestive-functors-aeson,
                 digestive-functors-lucid,
                 emailaddress,
                 fmt,
                 generic-lens,
                 lens,
                 lens-aeson >= 1.1,
                 mtl,
                 postgresql-simple,
                 range,
                 raw-strings-qq,
                 resource-pool,
                 req,
                 req-conduit,
                 rio,
                 servant,
                 servant-server,
                 xml,
                 warp

common common-warnings
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints

library
  import:              common-deps, common-warnings
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:     , Fingerdb.Database
                     , Fingerdb.Handlers
                     , Fingerdb.Prelude
                     , Fingerdb.XML
                     , Fingerdb.Models
  exposed-modules:     Fingerdb.Backend
  ghc-options:         -Wall -fno-warn-name-shadowing

executable fingerdb-backend
  import:              common-deps, common-warnings
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded -O2
  build-depends:       fingerdb-backend

test-suite fingerdb-backend-tests
  import:              common-deps, common-warnings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       hedgehog
